# Amaranthus

./: Amaranthus.cpp  CMakeLists.txt  LICENSE  Main.cpp  README.md
